@@ -9,6 +9,7 @@ Changes to squid-1.1.9 (March 25, 1997):
 	- Fixed situation where all requests would be handled by
 	  "single parent" and other peers would never be queried
 	  again.
+ 	- Added external 'unlinkd' process to unlink swap files.
 	- Added more dnsserver status information to cachemgr output.
 	- In httpReadReply: extend FD lifetime only after successful
 	  read, not every read.
